 -- Suppress compiler warnings in netcommon.cpp (Issues 141 and 142).
 -- Fixed uninitialized variables in fun_fmod() and fun_power() for
    non-typical build.
 -- Fix two configuration tests that broke with gcc 4.1.2.
 -- Avoid using strerror() directly (Issue 120).
 -- Fix compiler warnings in strtod.cpp (Issues 113, 114, and 115).
 -- Fix compiler warnings in functions.cpp (Issues 123, 124, 126, 127,
    128, 129, 130, and 131).
 -- Fix compiler warnings in funceval.cpp (Issue 122).
 -- Fix compiler warnings in comsys.cpp (Issues 157 and 158).
 -- Avoid using strncpy (Issue 118).
 -- Fix compiler warnings in mail.cpp (Issues 133, 134, 135, 136, 137,
    138, 139, and 140).
 -- Fix compiler warnings in conf.cpp (Issue 162, 163, and 166).
 -- Fixed double lbuf_free() introduced in 2.6.0.3 (Issue 188).
 -- Fixed compiler warnings in alloc.cpp (Issue 146 and 147).
 -- Fixed infinite loop in linewrap_general() resulting from safe_chr()
    being a macro instead of a function.
 -- Fixed subtle $-command exclusion (Issue 193).
 -- Fixed @color interactions with @name and @moniker (Issue 194).
 -- Fixed v() references in 'help substitutions3' (Issue 195).
 -- @clist/full column alignment with six-digit dbrefs (Issue 196).
 -- @mail index listing alignment with @moniker (Issue 197).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.


Cosmetic Changes:
~~~~~~~~~~~~~~~~


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().
 -- Updated config.guess, config.sub, and configure to later versions.
 -- Updated to autoconf 2.60a.