@@ -1755,15 +1755,53 @@ static void dump_users(DESC *e, char *match, int key)
     free_mbuf(buf);
 }
 
-#ifdef WOD_REALMS
-#define INFO_VERSION "1.1"
-#else // WOD_REALMS
-#define INFO_VERSION "1"
-#endif // WOD_REALMS
+static const char *DumpInfoTable[] =
+{
+#if defined(WOD_REALMS)
+    "WOD_REALMS",
+#endif
+#if defined(REALITY_LVLS)
+    "REALITY_LVLS"
+#endif
+#if defined(MEMORY_BASED)
+    "MEMORY_BASED",
+#endif
+#if defined(FIRANMUX)
+    "FIRANMUX",
+#endif
+#if defined(FIRANMUX_CONVERT)
+    "FIRANMUX_CONVERT",
+#endif
+#if defined(DEPRECATED)
+    "DEPRECATED",
+#endif
+    NULL
+};
 
 static void dump_info(DESC *arg_desc)
 {
-    queue_write(arg_desc, "### Begin INFO " INFO_VERSION "\r\n");
+    int nDumpInfoTable = 0;
+    while (NULL != DumpInfoTable[nDumpInfoTable])
+    {
+        nDumpInfoTable++;
+    }
+
+    const char **LocalDumpInfoTable = local_get_info_table();
+    int nLocalDumpInfoTable = 0;
+    while (NULL != LocalDumpInfoTable[nLocalDumpInfoTable])
+    {
+        nLocalDumpInfoTable++;
+    }
+
+    if (  0 == nDumpInfoTable
+       && 0 == nLocalDumpInfoTable)
+    {
+        queue_write(arg_desc, "### Begin INFO 1\r\n");
+    }
+    else
+    {
+        queue_write(arg_desc, "### Begin INFO 1.1\r\n");
+    }
 
     queue_string(arg_desc, tprintf("Name: %s\r\n", mudconf.mud_name));
 
@@ -1788,10 +1826,44 @@ static void dump_info(DESC *arg_desc)
     queue_write(arg_desc, tprintf("Connected: %d\r\n", count));
     queue_write(arg_desc, tprintf("Size: %d\r\n", mudstate.db_top));
     queue_write(arg_desc, tprintf("Version: %s\r\n", mudstate.short_ver));
-#ifdef WOD_REALMS
-    queue_write(arg_desc, tprintf("Patches: WOD_REALMS\r\n"));
-#endif // WOD_REALMS
-    queue_write(arg_desc, "### End INFO\r\n");
+
+    char *buf = alloc_lbuf("dump_info");
+    char *bp  = buf;
+
+    bool bFirst = true;
+    safe_str("Patches: ", buf, &bp);
+    if (0 < nDumpInfoTable)
+    {
+        for (int i = 0; i < nDumpInfoTable; i++)
+        {
+            if (!bFirst)
+            {
+                safe_chr(' ', buf, &bp);
+            }
+            else
+            {
+                bFirst = false;
+            }
+            safe_str(DumpInfoTable[i], buf, &bp);
+        }
+    }
+
+    for (int i = 0; i < nLocalDumpInfoTable; i++)
+    {
+        if (!bFirst)
+        {
+            safe_chr(' ', buf, &bp);
+        }
+        else
+        {
+            bFirst = false;
+        }
+        safe_str(LocalDumpInfoTable[i], buf, &bp);
+    }
+    *bp = '\0';
+    queue_write(arg_desc, buf);
+    free_lbuf(buf);
+    queue_write(arg_desc, "\r\n### End INFO\r\n");
 }
 
 static char *MakeCanonicalDoing(char *pDoing, size_t *pnValidDoing, bool *pbValidDoing)
